feat: implemented logic get task by id
